--- a/code/auth-service/src/main/resources/application.properties
+++ b/code/auth-service/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=auth-service
+
+
+# Включить Swagger
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
+
+# Настройки для отладки
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
+springdoc.show-actuator=true
+
+# Если нужно ограничить package scanning
+# springdoc.packages-to-scan=com.service.auth.controller
+springdoc.paths-to-match=/api/**
