--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 # Log file
 *.log
+*.log.gz
 
 # BlueJ files
 *.ctxt
@@ -25,6 +26,7 @@
 **/*.war
 **/*.nar
 **/*.ear
+*.jar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
