integration tests for device-auth service

--- a/code/service/device-auth-service/src/main/resources/application.properties
+++ b/code/service/device-auth-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=device-auth-serviceh
+spring.application.name=device-auth-service
 
 server.port=18083
 # Swagger
@@ -51,3 +51,8 @@ app.kafka.topics.device-auth-commands=device.auth.commands
 app.kafka.topics.device-auth-responses=device.auth.responses
 app.kafka.topics.device-auth-events=device.auth.events
 
+
+# Connection and timeout settings for tests
+spring.kafka.consumer.properties.request.timeout.ms=3000
+spring.kafka.consumer.properties.session.timeout.ms=1000
+spring.kafka.producer.properties.request.timeout.ms=3000
