--- a/code/service/device-auth-service/src/test/resources/application-integrationtest.properties
+++ b/code/service/device-auth-service/src/test/resources/application-integrationtest.properties
@@ -1,18 +1,30 @@
-spring.application.name=device-auth-serviceh
+spring.application.name=device-auth-service-integration-test
 
-server.port=18083
+server.port=0
+
+spring.autoconfigure.exclude=\
+  org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,\
+  org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration,\
+  org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,\
+  org.springframework.boot.autoconfigure.jdbc.JdbcTemplateAutoConfiguration,\
+  org.springframework.boot.autoconfigure.transaction.jta.JtaAutoConfiguration
+
+# Atomikos
+com.atomikos.icatch.log_base_name=atomikos-tm-${random.uuid}
+
+
 # Swagger
-springdoc.swagger-ui.enabled=true
-springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=false
+springdoc.api-docs.enabled=false
 
 # JWT Configuration
 app.jwt.access-token.expiration=900
 app.jwt.refresh-token.expiration=259200
-app.jwt.key=my_super_secret_jwt_key_256_bits_long_enough_12345
+app.jwt.key=integration_test_jwt_key_256_bits_long_enough_12345
 
 # Client DataSource XA Configuration
 app.datasource.device-token.xa-data-source-class-name=org.postgresql.xa.PGXADataSource
-app.datasource.device-token.xa-properties.url=jdbc:postgresql://localhost:5433/test_db
+app.datasource.device-token.xa-properties.url=jdbc:postgresql://localhost:5434/test_db
 app.datasource.device-token.xa-properties.user=test_user
 app.datasource.device-token.xa-properties.password=test_password
 app.datasource.device-token.unique-resource-name=clientXADataSource
@@ -20,15 +32,20 @@ app.datasource.device-token.pool-size=5
 
 # Refresh Token DataSource XA Configuration
 app.datasource.device-access-token.xa-data-source-class-name=org.postgresql.xa.PGXADataSource
-app.datasource.device-access-token.xa-properties.url=jdbc:postgresql://localhost:5433/test_db
+app.datasource.device-access-token.xa-properties.url=jdbc:postgresql://localhost:5434/test_db
 app.datasource.device-access-token.xa-properties.user=test_user
 app.datasource.device-access-token.xa-properties.password=test_password
 app.datasource.device-access-token.unique-resource-name=refreshTokenXADataSource
 app.datasource.device-access-token.pool-size=5
 
-# Kafka Configuration
-spring.kafka.bootstrap-servers=localhost:29092
+
+# Kafka Configuration - подключаемся к контейнеру
+spring.kafka.bootstrap-servers=localhost:29093
 spring.kafka.properties.spring.json.trusted.packages=*
+
+logging.level.org.springframework.kafka=WARN
+logging.level.org.apache.kafka=WARN
+logging.level.org.apache.kafka.clients=WARN
 
 # Consumer Configuration
 spring.kafka.consumer.group-id=device-auth-service-group
@@ -41,7 +58,7 @@ spring.kafka.consumer.properties.spring.json.use.type.headers=true
 spring.kafka.consumer.properties.spring.json.value.default.type=com.connection.common.events.Command
 spring.kafka.consumer.properties.spring.json.remove.type.headers=false
 
-# Producer Configuration (если еще нет)
+# Producer Configuration
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.properties.spring.json.add.type.headers=true
@@ -51,3 +68,12 @@ app.kafka.topics.device-auth-commands=device.auth.commands
 app.kafka.topics.device-auth-responses=device.auth.responses
 app.kafka.topics.device-auth-events=device.auth.events
 
+
+# Test Configuration
+spring.kafka.consumer.client-id=auth-service-integration-test-consumer
+spring.kafka.producer.client-id=auth-service-integration-test-producer
+
+# Connection and timeout settings for tests
+spring.kafka.consumer.properties.request.timeout.ms=30000
+spring.kafka.consumer.properties.session.timeout.ms=10000
+spring.kafka.producer.properties.request.timeout.ms=30000
