--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   POSTGRES_HOST: localhost
-  POSTGRES_PORT: 5432
+  POSTGRES_PORT: 5434
   POSTGRES_DB: test_db
   POSTGRES_USER: test_user
   POSTGRES_PASSWORD: test_password
@@ -231,10 +231,10 @@ jobs:
         allure --version
 
     - name: Run testAll task
-      run: ./code/gradlew testAll
+      run: cd code && gradle testAll
 
     - name: Generate Allure report
-      run: ./code/gradlew collectAllureResults generateCombinedAllureReport
+      run: cd code && gradle collectAllureResults generateCombinedAllureReport
 
     - name: Create branch-specific index
       run: |
