--- a/code/shared/client-shared/build.gradle
+++ b/code/shared/client-shared/build.gradle
@@ -9,7 +9,7 @@ plugins {
 
 group = 'com.connection'
 version = '1.0.0'
-description = 'buffer-shared'
+description = 'client-shared'
 
 java {
     toolchain {
@@ -20,7 +20,7 @@ java {
 
 // ========== CONFIGURATION ==========
 ext {
-    SERVICE_NAME = 'buffer-shared'
+    SERVICE_NAME = 'client-shared'
     ALLURE_RESULTS_DIR = "${buildDir}/allure-results"
     ALLURE_REPORT_DIR =  "${buildDir}/reports/allure-report"
     ALLURE_HISTORY_DIR = "${projectDir}/allure-history"
@@ -432,8 +432,8 @@ publishing {
             from components.java
             // Добавляем информацию о pom для лучшей совместимости
             pom {
-                name = 'buffer Shared Module'
-                description = 'Shared components for buffer services'
+                name = 'client Shared Module'
+                description = 'Shared components for client services'
                 url = 'http://www.example.com'
                 licenses {
                     license {
