--- a/code/shared/common-device-events/build.gradle
+++ b/code/shared/common-device-events/build.gradle
@@ -9,7 +9,7 @@ plugins {
 
 group = 'com.connection'
 version = '1.0.0'
-description = 'buffer-shared'
+description = 'common-device-events'
 
 java {
     toolchain {
@@ -20,7 +20,7 @@ java {
 
 // ========== CONFIGURATION ==========
 ext {
-    SERVICE_NAME = 'buffer-shared'
+    SERVICE_NAME = 'common-device-events'
     ALLURE_RESULTS_DIR = "${buildDir}/allure-results"
     ALLURE_REPORT_DIR =  "${buildDir}/reports/allure-report"
     ALLURE_HISTORY_DIR = "${projectDir}/allure-history"
