--- a/code/shared/connection-scheme-shared/.settings/org.eclipse.buildship.core.prefs
+++ b/code/shared/connection-scheme-shared/.settings/org.eclipse.buildship.core.prefs
@@ -2,7 +2,7 @@ arguments=--init-script /home/yurik/.config/Code/User/globalStorage/redhat.java/
 auto.sync=true
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
-connection.project.dir=../buffer-shared
+connection.project.dir=../..
 eclipse.preferences.version=1
 gradle.user.home=
 java.home=/usr/lib/jvm/java-21-openjdk-amd64
