--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -252,7 +252,7 @@ jobs:
         for module_pair in "${modules[@]}"; do
           IFS=':' read -r path name <<< "$module_pair"
           echo "📦 Publishing :shared:${path}"
-          ./gradlew ":shared:${path}:publishToMavenLocal"
+          gradle ":shared:${path}:publishToMavenLocal"
           
           # Проверяем что файл действительно появился
           jar_path="$HOME/.m2/repository/com/connection/${name}/1.0.0/${name}-1.0.0.jar"
@@ -274,10 +274,10 @@ jobs:
         done
 
     - name: Run testAll task
-      run: cd code && ./gradlew testAll
+      run: cd code && gradle testAll
 
     - name: Generate Allure report
-      run: cd code && ./gradlew collectAllureResults generateCombinedAllureReport
+      run: cd code && gradle collectAllureResults generateCombinedAllureReport
 
     - name: Create branch-specific index
       run: |
